tests/files/lexer_tests/should_fail/021.cmdr
// Illegal character in string (ascii 21)
var = ''